@@ -34,3 +34,4 @@ require "resumetools/resume/text_reader"
 require "resumetools/resume/pdf"
 require "resumetools/resume/plain_text"
 require "resumetools/resume/json"
+require "resumetools/resume/export"
