@@ -1,3 +1,6 @@
+2009-09-29 (Version 0.2.6)
+* Added text exporter
+
 2009-09-25 (Version 0.2.5.1)
 * Bumped prawn dependency to 0.5.1
 
